tests/error/effects_errors/return_pure_callable_comptime.err
Error: Type mismatch (at $FILE:11:0)
   | 
 9 | # This is an error because we enforce invariance of Callable types.
10 | @guppy.comptime
11 | def main() -> Callable[[int], int]:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |    return pure_func
   | ^^^^^^^^^^^^^^^^^^^ Expected return value of type `int -> int`, got `int -[]->
   |                     int`

Guppy compilation failed due to 1 previous error
